[package]
name = "zerocss_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocss_config = { path = "../zerocss_config" }
zerocss_extractor = { path = "../zerocss_extractor" }
zerocss_finder = { path = "../zerocss_finder" }